--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "ui component",
   "main": "src/index.js",
   "scripts": {
+    "start": "budo demo/demo.js:bundle.js --live --open",
+    "build": "browserify demo/demo.js > bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/basim-12/input.integer#readme",
   "devDependencies": {
+    "browserify": "^17.0.1",
     "budo": "^11.8.4"
   }
 }
