fixed name in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "input.integer",
+ "name": "@basim.asim123/input.integer",
   "version": "0.0.1",
   "description": "ui component",
   "main": "src/index.js",
